--- a/src/core/server/Makefile
+++ b/src/core/server/Makefile
@@ -13,6 +13,8 @@ clean:
 	rm -f *.xcodeproj/*.mode1
 	rm -f *.xcodeproj/*.mode1v3
 	rm -f *.xcodeproj/*.pbxuser
+	rm -rf *.xcodeproj/xcuserdata
+	rm -rf *.xcodeproj/project.xcworkspace/xcuserdata
 
 xcode:
 	open *.xcodeproj
