--- a/src/util/KeyDump/Makefile
+++ b/src/util/KeyDump/Makefile
@@ -9,6 +9,11 @@ clean:
 	rm -f *.xcodeproj/*.mode1
 	rm -f *.xcodeproj/*.mode1v3
 	rm -f *.xcodeproj/*.pbxuser
+	rm -rf *.xcodeproj/xcuserdata
+	rm -rf *.xcodeproj/project.xcworkspace/xcuserdata
+
+xcode:
+	open *.xcodeproj
 
 run: all
 	open ./build/Release/KeyDump.app
