--- a/src/util/multitouchextension/Makefile
+++ b/src/util/multitouchextension/Makefile
@@ -9,6 +9,11 @@ clean:
 	rm -f *.xcodeproj/*.mode1
 	rm -f *.xcodeproj/*.mode1v3
 	rm -f *.xcodeproj/*.pbxuser
+	rm -rf *.xcodeproj/xcuserdata
+	rm -rf *.xcodeproj/project.xcworkspace/xcuserdata
+
+xcode:
+	open *.xcodeproj
 
 run: all
 	./build/Release/KeyRemap4MacBook_multitouchextension.app/Contents/MacOS/KeyRemap4MacBook_multitouchextension
