--- a/util/SetCapsDelay/common/Makefile
+++ b/util/SetCapsDelay/common/Makefile
@@ -10,6 +10,11 @@ clean:
 	rm -f *.xcodeproj/*.mode1
 	rm -f *.xcodeproj/*.mode1v3
 	rm -f *.xcodeproj/*.pbxuser
+	rm -rf *.xcodeproj/xcuserdata
+	rm -rf *.xcodeproj/project.xcworkspace/xcuserdata
+
+xcode:
+	open *.xcodeproj
 
 reload:
 	-sudo ./scripts/unload.sh
