update Makefile around Info.plist

--- a/src/core/server/Makefile
+++ b/src/core/server/Makefile
@@ -2,6 +2,7 @@
 CONFIGURATION = Release
 
 all:
+	$(MAKE) -C ../../../pkginfo
 	$(MAKE) -C ../bridge
 	xcodebuild -alltargets -configuration $(CONFIGURATION) build
 
@@ -10,6 +11,7 @@ buildonly:
 
 clean:
 	rm -rf build
+	rm -f Info.plist
 	rm -f *.xcodeproj/*.mode1
 	rm -f *.xcodeproj/*.mode1v3
 	rm -f *.xcodeproj/*.pbxuser
