--- a/src/core/kext/Makefile
+++ b/src/core/kext/Makefile
@@ -13,6 +13,7 @@ buildonly:
 
 clean:
 	rm -rf build
+	rm -f Info.plist
 	rm -f *.xcodeproj/*.mode1
 	rm -f *.xcodeproj/*.mode1v3
 	rm -f *.xcodeproj/*.pbxuser
