--- a/src/util/cli/Makefile
+++ b/src/util/cli/Makefile
@@ -2,10 +2,12 @@
 CONFIGURATION = Release
 
 all:
+	$(MAKE) -C ../../../pkginfo
 	xcodebuild -alltargets -configuration $(CONFIGURATION) build
 
 clean:
 	rm -rf build
+	rm -f Info.plist
 	rm -f *.xcodeproj/*.mode1
 	rm -f *.xcodeproj/*.mode1v3
 	rm -f *.xcodeproj/*.pbxuser
