--- a/src/util/updater/Makefile
+++ b/src/util/updater/Makefile
@@ -7,6 +7,7 @@ all:
 
 clean:
 	rm -rf build
+	rm -f Info.plist
 	rm -f *.xcodeproj/*.mode1
 	rm -f *.xcodeproj/*.mode1v3
 	rm -f *.xcodeproj/*.pbxuser
