--- a/Tests/server/Makefile
+++ b/Tests/server/Makefile
@@ -2,6 +2,7 @@
 CONFIGURATION = Release
 
 all:
+	make -C ../../files/prefpane
 	xcodebuild -alltargets -configuration $(CONFIGURATION) build
 
 clean:
